# personal-bright

./: .pylintrc  Pipfile  README.md  personal-bright.py  pyproject.toml
.github/workflows/: codeql-analysis.yml
src/: main.py
